# babble

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  babel.go  changelog.md  doc.go  docker-compose.yaml  go.mod  go.sum  main.go  nginx.conf  zippygo.go
backend/: go.mod  go.sum  main.go
config/: config.go  db.go  doc.go  env.go
db/: db.go  models.go
deploy/: deployment.yaml
frontend/: README.md  next.config.ts  package-lock.json  package.json  tsconfig.json
handlers/: clean.go  const.go  docversion.go  handlers_test.go  index.go  info.go  library.go  logging.go  menu.go  zipfiles.go
models/: gorm.go  menu.go  models.go
schema/: README.md  alembic.ini  pyproject.toml
schema/alembic/: alembic.ini
schema/alembic/alembic/: env.py
schema/alembic/alembic/versions/: 15c638274eb8_set_up_access_tables.py  450bd6051482_generating_team_and_hash_tables.py  5de1423e00b7_create_user_facing_api.py  7aacff6739d0_add_primary_key_restrictions_to_docs.py  c42fec3758d8_create_babel_tables.py  e1d172d6789e_added_role_to_user_table.py  eb6ffddb1a1a_set_up_model.py
schema/alembic/models/: model.py
schema/babble/alembic/: env.py
schema/babble/alembic/versions/: 15c638274eb8_set_up_access_tables.py  7aacff6739d0_add_primary_key_restrictions_to_docs.py  87acbfea6ce7_add_project_key_and_team_name.py  c42fec3758d8_create_babel_tables.py
schema/babel_librarian.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: testharness.sh
static/: babel.css  htmx.min.js  indexContent.html
templates/: index.html  library.html
testharness/: testenv.sh  (+1 more)
(+62 files in other folders)
