[project]
name = "babble-schema"
version = "0.1.0"
description = "Alembic schema for babble"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["alembic>=1.14.0", "pymysql>=1.1.1"]

[tool.uv]
dev-dependencies = ["git-cliff>=2.7.0", "pre-commit>=4.0.1", "ruff>=0.8.3"]

[tool.ruff]
line-length = 120
